--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,11 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15.0"
+include_dir = "0.7.4"
 num-bigint = "0.4.6"
 reqwest = { version = "0.12.9", features = ["blocking"] }
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
-sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls"] }
+sqlx = { version = "0.8.2", features = ["migrate", "postgres", "runtime-tokio", "tls-rustls"] }
 tokio = { version = "1.42.0", features = ["full"] }
 
