--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+axum = { version = "0.7.9"}
+bigdecimal = { version = "0.4", features = ["serde"] }
 dotenv = "0.15.0"
 include_dir = "0.7.4"
 num-bigint = "0.4.6"
 reqwest = { version = "0.12.9", features = ["blocking"] }
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
-sqlx = { version = "0.8.2", features = ["migrate", "postgres", "runtime-tokio", "tls-rustls"] }
-tokio = { version = "1.42.0", features = ["full"] }
+sqlx = { version = "0.8.2", features = ["bigdecimal", "postgres", "runtime-tokio-rustls"] }
+# sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "bigdecimal", "numeric"] }
+tokio = { version = "1.42.0", features = ["full", "net"] }
 
